# URGNET-MOS

./: pyproject.toml
local/: infer_urgent2026_sqa.py
urgent_mos/: data.py  train.py  trainer.py  utils.py
urgent_mos/api/: infer.py
urgent_mos/model/: audio_encoder.py  common.py  pooling.py  urgent_mos.py
